--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -48,40 +48,44 @@
             </h2>
             <div>
                 <div class="list-services col-md-3 col-sm-6" id="services-brand">
-                    <img src="images/site-cuda/services-flag.png">
+                    <img class="service-img" src="images/site-cuda/services-flag.png">
                     <div class="list-services-title uppercase">
                         Branding
                     </div>
                     <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
+                    <img class="title-line" src="images/site-cuda/services-line.png">
                 </div>
                 <div class="list-services col-md-3 col-sm-6" id="services-design">
-                    <img src="images/site-cuda/services-pencil.png">
+                    <img class="service-img" src="images/site-cuda/services-pencil.png">
                     <div class="list-services-title uppercase">
                         design
                     </div>
                     <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
+                    <img class="title-line" src="images/site-cuda/services-line.png">
                 </div>
                 <div class="list-services col-md-3 col-sm-6" id="services-dev">
-                    <img src="images/site-cuda/services-gear.png">
+                    <img class="service-img" src="images/site-cuda/services-gear.png">
                     <div class="list-services-title uppercase">
                         development
                     </div>
                     <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
+                    <img class="title-line" src="images/site-cuda/services-line.png">
                 </div>
                 <div class="list-services col-md-3 col-sm-6" id="services-rocket">
-                    <img src="images/site-cuda/services-rocket.png">
+                    <img class="service-img" src="images/site-cuda/services-rocket.png">
                     <div class="list-services-title uppercase">
                         rocket science
                     </div>
                     <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
+                    <img class="title-line" src="images/site-cuda/services-line.png">
                 </div>
             </div>
         </div>
@@ -97,7 +101,7 @@
                 We are a small team of designers and developers, who help brands with big ideas.
             </h2>
             <div>
-                <div class="col-md-3 col-sm-6">
+                <div class="list-team col-md-3 col-sm-6">
                     <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Anne Hathaway
@@ -124,7 +128,7 @@
                     </ul>
                     <img class="title-line" src="images/site-cuda/team-line.png">
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="list-team col-md-3 col-sm-6">
                     <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Kate Upton
@@ -148,7 +152,7 @@
                     </ul>
                     <img class="title-line" src="images/site-cuda/team-line.png">
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="list-team col-md-3 col-sm-6">
                     <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Olivia Wilde
@@ -175,7 +179,7 @@
                     </ul>
                     <img class="title-line" src="images/site-cuda/team-line.png">
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="list-team col-md-3 col-sm-6">
                     <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Ashley Greene
@@ -309,7 +313,7 @@
                         <div class="quote-name">
                             Chanel Iman
                         </div>    
-                        <div class="quote-name">
+                        <div class="quote-pos">
                             CEO of Pinterest
                         </div>
                     </div>
@@ -325,7 +329,7 @@
                         <div class="quote-name">
                             Adrianna Lima
                         </div>    
-                        <div class="quote-name">
+                        <div class="quote-pos">
                             Founder of Instagram
                         </div>
                     </div>
@@ -341,7 +345,7 @@
                         <div class="quote-name">
                             Anne Hathaway
                         </div>    
-                        <div class="quote-name">
+                        <div class="quote-pos">
                             Lead Designer at Behance
                         </div>
                     </div>
@@ -357,7 +361,7 @@
                         <div class="quote-name">
                             Emma Stone
                         </div>    
-                        <div class="quote-name">
+                        <div class="quote-pos">
                             Co-Founder of Shazam
                         </div>
                     </div>
