--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -304,7 +304,7 @@
             <div class="testimonials">
                 <li class="list-testimonials col-md-6">
                     <div class="col-md-3">
-                    <img src="images/site-cuda/profile-holder.png">
+                    <img class="list-testimonials-mug" src="images/site-cuda/profile-holder.png">
                     </div>
                     <div class="col-md-9">
                         <div class="quote-text">
@@ -320,7 +320,7 @@
                 </li>
                 <li class="list-testimonials col-md-6">
                     <div class="col-md-3">
-                    <img src="images/site-cuda/profile-holder.png">
+                    <img class="list-testimonials-mug" src="images/site-cuda/profile-holder.png">
                     </div>
                     <div class="col-md-9">
                         <div class="quote-text">
@@ -336,7 +336,7 @@
                 </li>
                 <li class="list-testimonials col-md-6">
                     <div class="col-md-3">
-                    <img src="images/site-cuda/profile-holder.png">
+                    <img class="list-testimonials-mug" src="images/site-cuda/profile-holder.png">
                     </div>
                     <div class="col-md-9">
                         <div class="quote-text">
@@ -352,7 +352,7 @@
                 </li>
                 <li class="list-testimonials col-md-6">
                     <div class="col-md-3">
-                    <img src="images/site-cuda/profile-holder.png">
+                    <img class="list-testimonials-mug" src="images/site-cuda/profile-holder.png">
                     </div>
                     <div class="col-md-9">
                         <div class="quote-text">
